--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter the city name" spellcheck="false">
-            <button><img src="assets/img/search-svgrepo-com.svg" alt=""></button>
+            <button><img src="search-svgrepo-com.svg" alt=""></button>
         </div>
         <div class="weather-details">
             <div class="weather">
-                <img src="assets/img/rain-svgrepo-com.svg" class="weather-icon">
+                <img src="rain-svgrepo-com.svg" class="weather-icon">
                 <h1 class="temp">19°C</h1>
                 <h2 class="city">Delhi</h2>
             </div>
             <div class="details">
                 <div class="col">
-                    <img src="assets/img/humidity-svgrepo-com.svg" alt="">
+                    <img src="humidity-svgrepo-com.svg" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="assets/img/wind-svgrepo-com.svg" alt="">
+                    <img src="wind-svgrepo-com.svg" alt="">
                     <div>
                         <p class="wind">08 km/h</p>
                         <p>Wind Speed</p>
